Fix Sonar issues